src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void detail_MatchesInfo_H_set(void* self, void* val);
extern "C" __declspec(dllexport) double detail_MatchesInfo_confidence_get(void* self);
extern "C" __declspec(dllexport) void detail_MatchesInfo_confidence_set(void* self, double val);
extern "C" __declspec(dllexport) void detail_MultiBandBlender_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_MultiBandBlender_New_0(int try_gpu, int num_bands, int weight_type);
extern "C" __declspec(dllexport) int detail_MultiBandBlender_numBands_0(void* self);
extern "C" __declspec(dllexport) void detail_MultiBandBlender_setNumBands_0(void* self, int val);
extern "C" __declspec(dllexport) void detail_MultiBandBlender_prepare_0(void* self, cv::Rect dst_roi);
extern "C" __declspec(dllexport) void detail_MultiBandBlender_feed_0(void* self, void* img, void* mask, cv::Point tl);
extern "C" __declspec(dllexport) void detail_MultiBandBlender_blend_0(void* self, void* dst, void* dst_mask);
extern "C" __declspec(dllexport) void detail_NoBundleAdjuster_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_NoBundleAdjuster_New_0();
extern "C" __declspec(dllexport) void detail_NoExposureCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void detail_NoExposureCompensator_apply_0(void* self, int arg1, cv::Point arg2, void* arg3, void* arg4);
extern "C" __declspec(dllexport) void detail_NoExposureCompensator_getMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_NoExposureCompensator_setMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_NoSeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void detail_NoSeamFinder_find_0(void* self, void* arg1, void* arg2, void* arg3);
extern "C" __declspec(dllexport) void detail_PairwiseSeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void detail_PairwiseSeamFinder_find_0(void* self, void* src, void* corners, void* masks);
extern "C" __declspec(dllexport) void detail_ProjectorBase_Delete(void* self);
extern "C" __declspec(dllexport) void detail_SeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void detail_SeamFinder_find_0(void* self, void* src, void* corners, void* masks);
extern "C" __declspec(dllexport) void* detail_SeamFinder_createDefault_0(int type);
extern "C" __declspec(dllexport) void detail_SphericalProjector_Delete(void* self);
extern "C" __declspec(dllexport) void detail_SphericalProjector_mapForward_0(void* self, float x, float y, float u, float v);
extern "C" __declspec(dllexport) void detail_SphericalProjector_mapBackward_0(void* self, float u, float v, float x, float y);
extern "C" __declspec(dllexport) void detail_Timelapser_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_Timelapser_createDefault_0(int type);
extern "C" __declspec(dllexport) void detail_Timelapser_initialize_0(void* self, void* corners, void* sizes);
extern "C" __declspec(dllexport) void detail_Timelapser_process_0(void* self, void* img, void* mask, cv::Point tl);
extern "C" __declspec(dllexport) void* detail_Timelapser_getDst_0(void* self);
extern "C" __declspec(dllexport) void detail_TimelapserCrop_Delete(void* self);
extern "C" __declspec(dllexport) void detail_VoronoiSeamFinder_Delete(void* self);
extern "C" __declspec(dllexport) void detail_VoronoiSeamFinder_find_0(void* self, void* src, void* corners, void* masks);
extern "C" __declspec(dllexport) void cv_detail_focalsFromHomography_0(void* H, double f0, double f1, bool f0_ok, bool f1_ok);
extern "C" __declspec(dllexport) bool cv_detail_calibrateRotatingCamera_0(void* Hs, void* K);
extern "C" __declspec(dllexport) void cv_detail_normalizeUsingWeightMap_0(void* weight, void* src);
extern "C" __declspec(dllexport) void cv_detail_createWeightMap_0(void* mask, float sharpness, void* weight);
extern "C" __declspec(dllexport) void cv_detail_createLaplacePyr_0(void* img, int num_levels, void* pyr);
extern "C" __declspec(dllexport) void cv_detail_createLaplacePyrGpu_0(void* img, int num_levels, void* pyr);
extern "C" __declspec(dllexport) void cv_detail_restoreImageFromLaplacePyr_0(void* pyr);
extern "C" __declspec(dllexport) void cv_detail_restoreImageFromLaplacePyrGpu_0(void* pyr);
extern "C" __declspec(dllexport) void cv_detail_computeImageFeatures_0(void* featuresFinder, void* images, void* features, void* masks);
extern "C" __declspec(dllexport) void cv_detail_computeImageFeatures_1(void* featuresFinder, void* image, void* features, void* mask);
extern "C" __declspec(dllexport) void cv_detail_waveCorrect_0(void* rmats, int kind);
extern "C" __declspec(dllexport) const char* cv_detail_matchesGraphAsString_0(void* paths, void* pairwise_matches, float conf_threshold);
extern "C" __declspec(dllexport) void* cv_detail_leaveBiggestComponent_0(void* features, void* pairwise_matches, float conf_threshold);
extern "C" __declspec(dllexport) bool cv_detail_overlapRoi_0(cv::Point tl1, cv::Point tl2, cv::Size sz1, cv::Size sz2, cv::Rect roi);
extern "C" __declspec(dllexport) cv::Rect cv_detail_resultRoi_0(void* corners, void* images);
extern "C" __declspec(dllexport) cv::Rect cv_detail_resultRoiIntersection_0(void* corners, void* sizes);
extern "C" __declspec(dllexport) cv::Point cv_detail_resultTl_0(void* corners);
extern "C" __declspec(dllexport) void cv_detail_selectRandomSubset_0(int count, int size, void* subset);
extern "C" __declspec(dllexport) int cv_detail_stitchingLogLevel_0();