src/OpenCV5Sharp/Generated/NativeMethods.Stitching.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_H_set(DetailMatchesInfoHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double detail_MatchesInfo_confidence_get(DetailMatchesInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MatchesInfo_confidence_set(DetailMatchesInfoHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MultiBandBlender_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_MultiBandBlender_New_0(int try_gpu, int num_bands, int weight_type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_MultiBandBlender_numBands_0(DetailMultiBandBlenderHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MultiBandBlender_setNumBands_0(DetailMultiBandBlenderHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MultiBandBlender_prepare_0(DetailMultiBandBlenderHandle self, Rect dst_roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MultiBandBlender_feed_0(DetailMultiBandBlenderHandle self, MatHandle img, MatHandle mask, Point tl);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_MultiBandBlender_blend_0(DetailMultiBandBlenderHandle self, MatHandle dst, MatHandle dst_mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoBundleAdjuster_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_NoBundleAdjuster_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoExposureCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoExposureCompensator_apply_0(DetailNoExposureCompensatorHandle self, int arg1, Point arg2, MatHandle arg3, MatHandle arg4);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoExposureCompensator_getMatGains_0(DetailNoExposureCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoExposureCompensator_setMatGains_0(DetailNoExposureCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoSeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_NoSeamFinder_find_0(DetailNoSeamFinderHandle self, IntPtr arg1, IntPtr arg2, IntPtr arg3);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_PairwiseSeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_PairwiseSeamFinder_find_0(DetailPairwiseSeamFinderHandle self, IntPtr src, IntPtr corners, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_ProjectorBase_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_SeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_SeamFinder_find_0(DetailSeamFinderHandle self, IntPtr src, IntPtr corners, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_SeamFinder_createDefault_0(int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_SphericalProjector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_SphericalProjector_mapForward_0(DetailSphericalProjectorHandle self, float x, float y, float u, float v);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_SphericalProjector_mapBackward_0(DetailSphericalProjectorHandle self, float u, float v, float x, float y);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Timelapser_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_Timelapser_createDefault_0(int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Timelapser_initialize_0(DetailTimelapserHandle self, IntPtr corners, IntPtr sizes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Timelapser_process_0(DetailTimelapserHandle self, MatHandle img, MatHandle mask, Point tl);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_Timelapser_getDst_0(DetailTimelapserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_TimelapserCrop_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_VoronoiSeamFinder_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_VoronoiSeamFinder_find_0(DetailVoronoiSeamFinderHandle self, IntPtr src, IntPtr corners, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_focalsFromHomography_0(MatHandle H, double f0, double f1, [MarshalAs(UnmanagedType.U1)] bool f0_ok, [MarshalAs(UnmanagedType.U1)] bool f1_ok);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_detail_calibrateRotatingCamera_0(IntPtr Hs, MatHandle K);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_normalizeUsingWeightMap_0(MatHandle weight, MatHandle src);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_createWeightMap_0(MatHandle mask, float sharpness, MatHandle weight);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_createLaplacePyr_0(MatHandle img, int num_levels, IntPtr pyr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_createLaplacePyrGpu_0(MatHandle img, int num_levels, IntPtr pyr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_restoreImageFromLaplacePyr_0(IntPtr pyr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_restoreImageFromLaplacePyrGpu_0(IntPtr pyr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_computeImageFeatures_0(Feature2DHandle featuresFinder, IntPtr images, IntPtr features, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_computeImageFeatures_1(Feature2DHandle featuresFinder, MatHandle image, IntPtr features, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_waveCorrect_0(IntPtr rmats, int kind);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_detail_matchesGraphAsString_0(IntPtr paths, IntPtr pairwise_matches, float conf_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_detail_leaveBiggestComponent_0(IntPtr features, IntPtr pairwise_matches, float conf_threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_detail_overlapRoi_0(Point tl1, Point tl2, Size sz1, Size sz2, Rect roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_detail_resultRoi_0(IntPtr corners, IntPtr images);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_detail_resultRoiIntersection_0(IntPtr corners, IntPtr sizes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point cv_detail_resultTl_0(IntPtr corners);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detail_selectRandomSubset_0(int count, int size, IntPtr subset);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_detail_stitchingLogLevel_0();
    }
}
